<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_more"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_club"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_club"/>
        <item
            android:id="@+id/nav_palmares"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_palmares"/>
        <item
            android:id="@+id/nav_squad"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_squad"/>
    </group>

</menu>