<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClubDescriptionActivity"
    android:id="@+id/drawer_layout_club">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarClub"
            app:title="@string/menu_club"
            app:titleTextColor="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/desc_club_logo"
            android:layout_width="95dp"
            android:layout_height="95dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarClub"
            app:layout_constraintVertical_bias="0.050000012"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/desc_club_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="MyTeamName"
            app:layout_constraintBottom_toBottomOf="@+id/desc_club_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/desc_club_logo"
            app:layout_constraintTop_toTopOf="@+id/desc_club_logo" />

        <TextView
            android:id="@+id/desc_foundation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="foundationInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_club_logo"
            app:layout_constraintVertical_bias="0.14999998" />

        <TextView
            android:id="@+id/desc_stadium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="stadiumInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_foundation"
            app:layout_constraintVertical_bias="0.100000024" />

        <TextView
            android:id="@+id/desc_coach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"

            android:text="actualCoach"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_stadium"
            app:layout_constraintVertical_bias="0.100000024" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/desc_edit_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_coach"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="196dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/editTeamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_name" />

            <EditText
                android:id="@+id/editFoundationYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:hint="Year" />

            <EditText
                android:id="@+id/editFounder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_name" />

            <EditText
                android:id="@+id/editStadium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_stadium" />

            <EditText
                android:id="@+id/editCoach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_name" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit"
                android:onClick="onClickOnEditButton" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/navigation_view"/>



</androidx.drawerlayout.widget.DrawerLayout>